Defect/issues239 (#303)
* First level of COUNT query as IN

* Deletion of JPACollectionFilterQuery